Date       Version  Comment
---------------------------------------------------------------------------
5/6  2004  2.0.0    Now ms-sys should compile cleanly also with a 2.6 Linux
                    kernel based distribution.

21/3 2004  1.1.3    Added switch -p to write needed partition information
                    which might be missing when some format programs are
                    used. The program now supports command line switch
                    concatenation, i e "ms-sys -f2 file" instead of
                    "ms-sys -f -2 file".

16/2 2004  1.1.2    Unofficial contributed version with support for new
                    MBRs and better MBR recognition. Instead of completing
                    the work to make this an official release I choose to
                    merge it into my ongoing work.

4/1  2004  1.1.1    Now compiles even if libintl.h is missing
                    Replaced the -k switch with -l (--wipelabel) with the
                    inverted functionality. This functionality was also
                    implemented for FAT12 and FAT16.

20/9 2003  1.1.0    DOS FAT16 boot record added
                    NT FAT32 boot record added

23/2 2003  1.0.2    Documentation update, man-page added

9/8 2002   1.0.1    Fixed problem compiling sv_SE.po with newer versions of
                    msgfmt

4/8 2002   1.0      First public release. Documentation updated with
                    SourceForge addresses for web and email contact.

30/7 2002  0.9      First stable release